<?xml version="1.0" encoding="utf-8"?>
<!-- Menú contextual de la carta de unidad: "Seguir también"/"Detener todo" (seguimiento múltiple),
     más "Guardar"/"Alerta de proximidad" (unidades guardadas): tres conceptos INDEPENDIENTES
     (ver MapFragment.mostrarMenuOpcionesCarta()). Ninguna de las acciones de guardar/alerta llama
     jamás a SeguimientoService, ni viceversa. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_seguir_tambien"
        android:title="@string/seguir_tambien" />
    <item
        android:id="@+id/menu_detener_todo"
        android:title="@string/dejar_todo" />
    <item
        android:id="@+id/menu_guardar_unidad"
        android:title="@string/menu_guardar_unidad" />
    <item
        android:id="@+id/menu_alerta_unidad"
        android:title="@string/menu_alerta_activar" />
    <item
        android:id="@+id/menu_alerta_radio"
        android:title="@string/menu_alerta_radio_fmt"
        android:visible="false" />
</menu>
